chore(java25): migrate Eclipse project to Maven with Java 25 support
Modernize the legacy build by replacing Eclipse-only project metadata with a Maven-based setup targeting Java 25 and reproducible CLI builds.

Refactor JDBC initialization to be runtime-configurable so the app can run on modern JDKs without the removed sun.jdbc.odbc bridge, and remove finalize-based cleanup paths in DB classes.

Add a JUnit 5 unit test suite for business and writer logic, enable JaCoCo coverage reporting, and expand README with architecture, runtime modes, build/test instructions, and JDBC/ODBC configuration details.