@@ -25,6 +25,10 @@ import ctvdkip.util.ApplicationLogger;
  * 
  */
 public class CobasWinDB {
+	private static final String DRIVER_PROPERTY = "ctvdkip.cobaswin.jdbc.driver";
+	private static final String URL_PROPERTY = "ctvdkip.cobaswin.jdbc.url";
+	private static final String USER_PROPERTY = "ctvdkip.cobaswin.jdbc.user";
+	private static final String PASSWORD_PROPERTY = "ctvdkip.cobaswin.jdbc.password";
 	
 	/**
 	 * The database connection object 
@@ -50,32 +54,37 @@ public class CobasWinDB {
 	 *
 	 */
 	private void open(){
-		
-		// odbc string
-		String _odbcstring = "sun.jdbc.odbc.JdbcOdbcDriver";
-		String _dbConnectionString = "jdbc:odbc:cobaswin";
-		
-		// Loading Driver and opening dbConnectionnection
-		try{
-			Class.forName(_odbcstring);
+		final String driver = readConfig(DRIVER_PROPERTY, "CTV_COBASWIN_JDBC_DRIVER", "");
+		final String connectionUrl = readConfig(URL_PROPERTY, "CTV_COBASWIN_JDBC_URL", "jdbc:odbc:cobaswin");
+		final String user = readConfig(USER_PROPERTY, "CTV_COBASWIN_JDBC_USER", "dataflex");
+		final String password = readConfig(PASSWORD_PROPERTY, "CTV_COBASWIN_JDBC_PASSWORD", "dataflex");
+
+		if (!driver.isEmpty()) {
+			try{
+				Class.forName(driver);
+			}
+			catch(ClassNotFoundException _classNotFoundEx){
+				ApplicationLogger.getInstance().getLogger().severe(
+						"Could not load configured CobasWin JDBC driver: " + driver
+				);
+				ApplicationLogger.getInstance().getLogger().severe(
+						"System is shuting down ..."
+				);
+				System.exit(0);
+			}
 		}
-		catch(ClassNotFoundException _classNotFoundEx){
-			ApplicationLogger.getInstance().getLogger().severe(
-					"ODBC String for Voks DB is not valid :("
-			);
-			ApplicationLogger.getInstance().getLogger().severe(
-					"System is shuting down ..."
-			);
-			System.exit(0);
-		}
 		
 		try{
-			dbConnection = DriverManager.getConnection(_dbConnectionString, "dataflex","dataflex");
+			if (user.isEmpty() && password.isEmpty()) {
+				dbConnection = DriverManager.getConnection(connectionUrl);
+			} else {
+				dbConnection = DriverManager.getConnection(connectionUrl, user, password);
+			}
 		}
 		catch (SQLException p_sqlex ) {
 			
 			ApplicationLogger.getInstance().getLogger().severe(
-					"Could not open CobasWinDB. " +  p_sqlex.getMessage()
+					"Could not open CobasWinDB via " + connectionUrl + ". " +  p_sqlex.getMessage()
 			);
 			ApplicationLogger.getInstance().getLogger().severe(
 					"System is shuting down ..."
@@ -98,36 +107,41 @@ public class CobasWinDB {
 	 *
 	 */
 	private boolean close(){
-		
-		//closing DB Connection
-		try{
-			dbConnection.close();	
+		if (dbConnection != null) {
+			try{
+				dbConnection.close();	
+			}
+			catch(SQLException p_sqlex){
+				ApplicationLogger.getInstance().getLogger().severe(
+						"Could not close VoksDB. Maybe it is already closed?"
+				);
+				return false;
+			}
 		}
-		catch(SQLException p_sqlex){
-			ApplicationLogger.getInstance().getLogger().severe(
-					"Could not close VoksDB. Maybe it is already closed?"
-			);
-			return false;
-		};
 		
-		try{
-			statement.close();
-		}
-		catch(SQLException ex){
-			ApplicationLogger.getInstance().getLogger().severe(
-					"Could not close Statement from Voks DB :( = "+ ex
-			);
+		if (statement != null) {
+			try{
+				statement.close();
+			}
+			catch(SQLException ex){
+				ApplicationLogger.getInstance().getLogger().severe(
+						"Could not close Statement from Voks DB :( = "+ ex
+				);
+			}
 		}
 		return true;
 	};
-	
-	/**
-	 * Schliesst die Connectin zur Datenbank.
-	 * Diese Methode garantiert das Schliesesn der DB.
-	 *
-	 */
-	protected void finalize(){
-		this.close();
+
+	private static String readConfig(final String propertyName, final String envName, final String defaultValue) {
+		final String propertyValue = System.getProperty(propertyName);
+		if (propertyValue != null && !propertyValue.trim().isEmpty()) {
+			return propertyValue.trim();
+		}
+		final String envValue = System.getenv(envName);
+		if (envValue != null && !envValue.trim().isEmpty()) {
+			return envValue.trim();
+		}
+		return defaultValue;
 	}
 	
 	/**
@@ -259,7 +273,7 @@ public class CobasWinDB {
 			while (_rs.next()){
 
 				Integer _int;
-				_int = new Integer(_rs.getInt("BET_KOND"));
+				_int = Integer.valueOf(_rs.getInt("BET_KOND"));
 				r_zbcodesauscobaswin.add(_int);
 
 			};
